--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,20 @@
 ﻿@page "/"
+@inject NavigationManager uriHelper;
 
-<h1>Hello, world!</h1>
+<h1>Select Game</h1>
 
-Welcome to your new app.
+<button @onclick="(async () => SelectGame(1))">
+    <img src="images/jacksorbetter.jpg" alt="Jacks Or Better" />
+</button>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<button @onclick="(async () => SelectGame(2))">
+    <img src="images/jacksorbetter-versus.jpg" alt="Jacks Or Better Versus" />
+</button>
+
+@code
+{
+    private void SelectGame(int gameType)
+    {
+        uriHelper.NavigateTo("/jacksorbetter");        
+    }
+}
