--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -11,7 +11,12 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
-        </li>
+        </li>        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="componenttestbed">
+                <span class="oi oi-aperture" aria-hidden="true"></span> Component Test Pad
+            </NavLink>
+        </li>        
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
