Moved Client/Components to VideoPoker.Components

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.JSInterop
 @using VideoPoker.Client
 @using VideoPoker.Client.Shared
-@using VideoPoker.Client.Components
+@using VideoPoker.Components
